# app/Models/User.php
@@ -6,6 +6,7 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Illuminate\Support\Facades\Auth;
 use Laravel\Sanctum\HasApiTokens;
 
 class User extends Authenticatable
@@ -28,7 +29,26 @@ class User extends Authenticatable
         'picture',
         'provider_id',
         'provider_token',
+        'role',
+        'position_id',
+        'department_id',
+        'company_id',
+        'created_by',
+        'updated_by',
+        'is_deleted',
+        'deleted_by',
     ];
+
+    protected static function boot()
+    {
+        parent::boot();
+
+        static::creating(function ($model) {
+            $model->created_by = Auth::user()->f_name . ' ' . Auth::user()->l_name;
+            $model->updated_by = Auth::user()->f_name . ' ' . Auth::user()->l_name;
+            $model->is_deleted = 0;
+        });
+    }
 
     /**
      * The attributes that should be hidden for serialization.
